@@ -7,6 +7,7 @@ title.short              = Tree
 
 page.main                = Main
 page.colors              = Colors
+page.blueprints          = Box Blueprints
 
 bookmarks.add            = Add
 bookmarks.delete         = Delete
